--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/HW?useUnicode=true & characterEncoding=utf-8 &
       useSSL=true & serverTimezone=Asia/Shanghai
     username: root
-    password: 7426985mc
+    password: *******
 
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
